--- a/foundations/flex/07-flex-layout-2/index.html
+++ b/foundations/flex/07-flex-layout-2/index.html
@@ -16,7 +16,7 @@
     
     <div class="content">
       <div class="sidebar">
-        <ul>
+        <ul class = "sidebarlinks">
           <li><a href="#">⭐ - link one</a></li>
           <li><a href="#">🦸🏽‍♂️ - link two</a></li>
           <li><a href="#">🖌️ - link three</a></li>
